[tool.poetry]
name = "tensorflow-examples"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "tensorflow_examples"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.11.1"
progress = "^1.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
